--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -2,11 +2,6 @@
 	font-family: 'Assistant', sans-serif;
 }
 
-.font-xxs {
-	font-size: 8px;
-	line-height: 10px;
-}
-
 .font-xs {
 	font-size: 10px;
 	line-height: 12px;
@@ -35,4 +30,33 @@
 .font-xxl {
 	font-size: 20px;
 	line-height: 22px;
+}
+
+.font-xxxl {
+	font-size: 22px;
+	line-height: 24px;
+}
+
+.font-light {
+	font-weight: 300;
+}
+
+.font-regular {
+	font-weight: 400;
+}
+
+.font-medium {
+	font-weight: 500;
+}
+
+.font-semibold {
+	font-weight: 600;
+}
+
+.font-bold {
+	font-weight: 700;
+}
+
+.font-extrabold {
+	font-weight: 800;
 }
