--- a/.storybook/storybook.scss
+++ b/.storybook/storybook.scss
@@ -5,3 +5,28 @@
 		background: rgba(51, 51, 51) !important;
 	}
 }
+
+.css-1njl3fa {
+	border: none !important;
+	box-shadow: none !important;
+	background-image: none !important;
+
+	div {
+		:first-child {
+			margin-left: 2px;
+		}
+
+		:last-child {
+			margin-right: 2px;
+		}
+
+		&:not(:first-child):not(:last-child) {
+			margin: 0 2px;
+		}
+	}
+
+	::before {
+		content: none;
+		border-radius: 8px;
+	}
+}
