--- a/src/components/Loader/spinner.scss
+++ b/src/components/Loader/spinner.scss
@@ -1,9 +1,16 @@
+@import '@/styles/layout.scss';
+
 .bo-loading-spinner {
 	position: absolute;
 	border-radius: 50%;
-	border: 3px solid var(--gray-50);
+	border: 2px solid transparent;
 	animation: spin 2s linear infinite;
 	-webkit-animation: spin 2s linear infinite;
+
+	&.xxs {
+		width: 8px;
+		height: 8px;
+	}
 
 	&.xs {
 		width: 12px;
@@ -11,13 +18,13 @@
 	}
 
 	&.sm {
-		width: 16px;
-		height: 16px;
+		width: 14px;
+		height: 14px;
 	}
 
 	&.md {
-		width: 20px;
-		height: 20px;
+		width: 16px;
+		height: 16px;
 	}
 
 	&.lg {
@@ -26,32 +33,42 @@
 	}
 
 	&.xl {
-		width: 28px;
-		height: 28px;
+		width: 32px;
+		height: 32px;
+	}
+
+	&.xxl {
+		width: 40px;
+		height: 40px;
+	}
+
+	&.xxxl {
+		width: 48px;
+		height: 48px;
 	}
 
 	&.default {
-		border-top: 3px solid var(--black);
+		border-top: 2px solid var(--black);
 	}
 
 	&.info {
-		border-top: 3px solid var(--blue-500);
+		border-top: 2px solid var(--blue-500);
 	}
 
 	&.tertiary {
-		border-top: 3px solid var(--gray-500);
+		border-top: 2px solid var(--gray-500);
 	}
 
 	&.success {
-		border-top: 3px solid var(--green-500);
+		border-top: 2px solid var(--green-500);
 	}
 
 	&.warning {
-		border-top: 3px solid var(--yellow-500);
+		border-top: 2px solid var(--yellow-500);
 	}
 
 	&.danger {
-		border-top: 3px solid var(--red-500);
+		border-top: 2px solid var(--red-500);
 	}
 }
 
