--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -1,9 +1,21 @@
 @use './colors.scss';
 
-.__dark {
-	--icon-color: var(--white);
+:root {
+	--error-color: var(--red-600);
 }
 
 .__light {
 	--icon-color: var(--black);
+
+	--input-label-color: var(--gray-800);
+	--input-border-color: var(--gray-100);
+	--input-background-color: var(--gray-50);
+}
+
+.__dark {
+	--icon-color: var(--white);
+
+	--input-label-color: var(--gray-300);
+	--input-border-color: var(--gray-800);
+	--input-background-color: var(--gray-800);
 }
