--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,40 +1,75 @@
-* {
+.font-sans {
+	font-family:
+		ui-sans-serif,
+		system-ui,
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		'Helvetica Neue',
+		Arial,
+		'Noto Sans',
+		sans-serif,
+		'Apple Color Emoji',
+		'Segoe UI Emoji',
+		'Segoe UI Symbol',
+		'Noto Color Emoji';
+}
+.font-serif {
+	font-family: ui-serif, Georgia, Cambria, 'Times New Roman', Times, serif;
+}
+
+.font-mono {
+	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+		'Liberation Mono', 'Courier New', monospace;
+}
+
+.font-assistant {
 	font-family: 'Assistant', sans-serif;
 }
 
+.font-inter {
+	font-family: 'Inter', sans-serif;
+}
+
+.font-xxs {
+	font-size: 0.625rem; /* 10px */
+	line-height: 0.75rem; /* 12px */
+}
+
 .font-xs {
-	font-size: 10px;
-	line-height: 12px;
+	font-size: 0.75rem; /* 12px */
+	line-height: 1rem /* 16px */;
 }
 
 .font-sm {
-	font-size: 12px;
-	line-height: 14px;
+	font-size: 0.875rem; /* 14px */
+	line-height: 1.25rem; /* 20px */
 }
 
 .font-md {
-	font-size: 14px;
-	line-height: 16px;
+	font-size: 1rem; /* 16px */
+	line-height: 1.5rem; /* 24px */
 }
 
 .font-lg {
-	font-size: 16px;
-	line-height: 18px;
+	font-size: 1rem; /* 16px */
+	line-height: 1.5rem; /* 24px */
 }
 
 .font-xl {
-	font-size: 18px;
-	line-height: 20px;
+	font-size: 1.25rem; /* 20px */
+	line-height: 1.75rem; /* 28px */
 }
 
 .font-xxl {
-	font-size: 20px;
-	line-height: 22px;
+	font-size: 1.5rem; /* 24px */
+	line-height: 2rem; /* 32px */
 }
 
 .font-xxxl {
-	font-size: 22px;
-	line-height: 24px;
+	font-size: 1.875rem; /* 30px */
+	line-height: 2.25rem; /* 36px */
 }
 
 .font-light {
