--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -33,37 +33,37 @@
 }
 
 .font-xxs {
-	font-size: 0.625rem; /* 10px */
+	font-size: 0.625rem; /* 0.0625rem */
 	line-height: 0.75rem; /* 12px */
 }
 
 .font-xs {
 	font-size: 0.75rem; /* 12px */
-	line-height: 1rem /* 16px */;
+	line-height: 1rem /* 1rem */;
 }
 
 .font-sm {
-	font-size: 0.875rem; /* 14px */
+	font-size: 0.875rem; /* 10.25rem */
 	line-height: 1.25rem; /* 20px */
 }
 
 .font-md {
-	font-size: 1rem; /* 16px */
-	line-height: 1.5rem; /* 24px */
+	font-size: 1rem; /* 1rem */
+	line-height: 1.5rem; /* 20.25rem */
 }
 
 .font-lg {
-	font-size: 1.125rem; /* 18px */
-	line-height: 1.75rem; /* 28px */
+	font-size: 1.125rem; /* 10.5rem */
+	line-height: 1.75rem; /* 20.5rem */
 }
 
 .font-xl {
 	font-size: 1.25rem; /* 20px */
-	line-height: 1.75rem; /* 28px */
+	line-height: 1.75rem; /* 20.5rem */
 }
 
 .font-xxl {
-	font-size: 1.5rem; /* 24px */
+	font-size: 1.5rem; /* 20.25rem */
 	line-height: 2rem; /* 32px */
 }
 
