--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -15,7 +15,7 @@
 .slide-in-up-enter,
 .slide-in-up-leave-to {
 	opacity: 0;
-	transform: translateY(20px);
+	transform: translateY(1.25rem);
 }
 
 .slide-in-right-enter-active,
@@ -27,7 +27,7 @@
 .slide-in-right-enter,
 .slide-in-right-leave-to {
 	opacity: 0;
-	transform: translateX(20px);
+	transform: translateX(1.25rem);
 }
 
 .slide-in-left-enter-active,
@@ -39,7 +39,7 @@
 .slide-in-left-enter,
 .slide-in-left-leave-to {
 	opacity: 0;
-	transform: translateX(-20px);
+	transform: translateX(-1.25rem);
 }
 
 .scale-enter-active,
