--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,7 @@
+@import './layout.scss';
+@import './colors.scss';
 @import './themes.scss';
+@import './animations.scss';
 @import './typography.scss';
 
 *,
