--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,142 +1,83 @@
-.height-xxs {
-	height: 8px;
-}
-
 .height-xs {
-	height: 12px;
+	height: 0.375rem; /* 6px */
 }
 
 .height-sm {
-	height: 16px;
+	height: 0.625rem; /* 10px */
 }
 
 .height-md {
-	height: 20px;
+	height: 0.875rem; /* 14px */
 }
 
 .height-lg {
-	height: 24px;
+	height: 1.125rem; /* 18px */
 }
 
 .height-xl {
-	height: 32px;
+	height: 1.375rem; /* 22px */
 }
 
 .height-xxl {
-	height: 40px;
+	height: 1.625rem; /* 26px */
 }
 
 .height-xxxl {
-	height: 48px;
-}
-
-.height-full {
-	height: 100%;
-}
-
-.height-screen {
-	height: 100vh;
-}
-
-.width-xxs {
-	width: 8px;
+	height: 1.875rem; /* 30px */
 }
 
 .width-xs {
-	width: 12px;
+	width: 0.375rem; /* 6px */
 }
 
 .width-sm {
-	width: 16px;
+	width: 0.625rem; /* 10px */
 }
 
 .width-md {
-	width: 20px;
+	width: 0.875rem; /* 14px */
 }
 
 .width-lg {
-	width: 24px;
+	width: 1.125rem; /* 18px */
 }
 
 .width-xl {
-	width: 32px;
+	width: 1.375rem; /* 22px */
 }
 
 .width-xxl {
-	width: 40px;
+	width: 1.625rem; /* 26px */
 }
 
 .width-xxxl {
-	width: 48px;
-}
-.width-full {
-	width: 100%;
+	width: 1.875rem; /* 30px */
 }
 
-.width-screen {
-	width: 100vw;
+.padding-xs {
+	padding: 0.375rem; /* 6px */
 }
 
-.spacing-xxs {
-	margin: 4px;
+.padding-sm {
+	padding: 0.625rem; /* 10px */
 }
 
-.spacing-xs {
-	margin: 8px;
+.padding-md {
+	padding: 0.875rem; /* 14px */
 }
 
-.spacing-sm {
-	margin: 12px;
+.padding-lg {
+	padding: 1.125rem; /* 18px */
 }
 
-.spacing-md {
-	margin: 16px;
+.padding-xl {
+	padding: 1.375rem; /* 22px */
 }
 
-.spacing-lg {
-	margin: 20px;
+.padding-xxl {
+	padding: 1.625rem; /* 26px */
 }
 
-.spacing-xl {
-	margin: 24px;
-}
-
-.spacing-xxl {
-	margin: 28px;
-}
-
-.spacing-xxxl {
-	margin: 32px;
-}
-
-.flex-gap-xxs {
-	gap: 4px;
-}
-
-.flex-gap-xs {
-	gap: 8px;
-}
-
-.flex-gap-sm {
-	gap: 12px;
-}
-
-.flex-gap-md {
-	gap: 16px;
-}
-
-.flex-gap-lg {
-	gap: 20px;
-}
-
-.flex-gap-xl {
-	gap: 24px;
-}
-
-.flex-gap-xxl {
-	gap: 28px;
-}
-
-.flex-gap-xxxl {
-	gap: 32px;
+.padding-xxxl {
+	padding: 1.875rem; /* 30px */
 }
