--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,83 +1,83 @@
-.height-xs {
+%height-xs {
 	height: 0.375rem; /* 6px */
 }
 
-.height-sm {
+%height-sm {
 	height: 0.625rem; /* 10px */
 }
 
-.height-md {
+%height-md {
 	height: 0.875rem; /* 14px */
 }
 
-.height-lg {
+%height-lg {
 	height: 1.125rem; /* 18px */
 }
 
-.height-xl {
+%height-xl {
 	height: 1.375rem; /* 22px */
 }
 
-.height-xxl {
+%height-xxl {
 	height: 1.625rem; /* 26px */
 }
 
-.height-xxxl {
+%height-xxxl {
 	height: 1.875rem; /* 30px */
 }
 
-.width-xs {
+%width-xs {
 	width: 0.375rem; /* 6px */
 }
 
-.width-sm {
+%width-sm {
 	width: 0.625rem; /* 10px */
 }
 
-.width-md {
+%width-md {
 	width: 0.875rem; /* 14px */
 }
 
-.width-lg {
+%width-lg {
 	width: 1.125rem; /* 18px */
 }
 
-.width-xl {
+%width-xl {
 	width: 1.375rem; /* 22px */
 }
 
-.width-xxl {
+%width-xxl {
 	width: 1.625rem; /* 26px */
 }
 
-.width-xxxl {
+%width-xxxl {
 	width: 1.875rem; /* 30px */
 }
 
-.padding-xs {
+%padding-xs {
 	padding: 0.375rem; /* 6px */
 }
 
-.padding-sm {
+%padding-sm {
 	padding: 0.625rem; /* 10px */
 }
 
-.padding-md {
+%padding-md {
 	padding: 0.875rem; /* 14px */
 }
 
-.padding-lg {
+%padding-lg {
 	padding: 1.125rem; /* 18px */
 }
 
-.padding-xl {
+%padding-xl {
 	padding: 1.375rem; /* 22px */
 }
 
-.padding-xxl {
+%padding-xxl {
 	padding: 1.625rem; /* 26px */
 }
 
-.padding-xxxl {
+%padding-xxxl {
 	padding: 1.875rem; /* 30px */
 }
