--- a/src/components/Badge/css/badge.scss
+++ b/src/components/Badge/css/badge.scss
@@ -122,67 +122,46 @@
 		}
 
 		&.xs {
-			width: 0.625rem;
-			height: 0.625rem;
+			width: 1rem;
+			height: 1rem;
+			padding: 0.125rem;
 		}
 
 		&.sm {
-			width: 0.75rem;
-			height: 0.75rem;
+			width: 1.5rem;
+			height: 1.5rem;
+			padding: 0.1875rem;
 		}
 
 		&.md {
-			width: 1rem;
-			height: 1rem;
+			width: 2rem;
+			height: 2rem;
+			padding: 0.25rem;
 		}
 
 		&.lg {
-			width: 1.25rem;
-			height: 1.25rem;
+			width: 2.5rem;
+			height: 2.5rem;
+			padding: 0.3125rem;
 		}
 
 		&.xl {
-			width: 1.5rem;
-			height: 1.5rem;
+			width: 3rem;
+			height: 3rem;
+			padding: 0.375rem;
 		}
 
 		&.xxl {
-			width: 2rem;
-			height: 2rem;
+			width: 3.5rem;
+			height: 3.5rem;
+			padding: 0.4375rem;
 		}
 
 		&.xxxl {
-			width: 2.5rem;
-			height: 2.5rem;
+			width: 4rem;
+			height: 4rem;
+			padding: 0.5rem;
 		}
-	}
-
-	&.xs {
-		@extend %font-xxs;
-	}
-
-	&.sm {
-		@extend %font-xs;
-	}
-
-	&.md {
-		@extend %font-sm;
-	}
-
-	&.lg {
-		@extend %font-lg;
-	}
-
-	&.xl {
-		@extend %font-xl;
-	}
-
-	&.xxl {
-		@extend %font-xxl;
-	}
-
-	&.xxxl {
-		@extend %font-xxxl;
 	}
 
 	&.label {
