--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -7,6 +7,8 @@
 .__light {
 	--icon-color: var(--black);
 
+	--text-color: var(--black);
+
 	--input-text-color: var(--gray-800);
 	--input-border-color: var(--gray-100);
 	--input-background-color: var(--gray-50);
@@ -18,6 +20,8 @@
 
 .__dark {
 	--icon-color: var(--white);
+
+	--text-color: var(--white);
 
 	--input-text-color: var(--gray-300);
 	--input-border-color: var(--gray-800);
