--- a/src/components/Input/css/input.scss
+++ b/src/components/Input/css/input.scss
@@ -1,5 +1,5 @@
 @import '@/styles/layout.scss';
-@import '@/styles/themes.scss';
+@import '@/styles/theme.scss';
 @import '@/styles/typography.scss';
 
 *,
