--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import './layout.scss';
 @import './colors.scss';
-@import './themes.scss';
+@import './theme.scss';
 @import './animations.scss';
 @import './typography.scss';
 
