--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,518 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	/* Inter */
+	@font-face {
+		font-family: InterVariable;
+		font-style: normal;
+		font-weight: 100 900;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterVariable.woff2') format('woff2');
+	}
+
+	@font-face {
+		font-family: InterVariable;
+		font-style: italic;
+		font-weight: 100 900;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterVariable-Italic.woff2') format('woff2');
+	}
+
+	/* static fonts */
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 100;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-Thin.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 100;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-ThinItalic.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 200;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-ExtraLight.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 200;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-ExtraLightItalic.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 300;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-Light.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 300;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-LightItalic.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 400;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-Regular.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 400;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-Italic.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 500;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-Medium.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 500;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-MediumItalic.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 600;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-SemiBold.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 600;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-SemiBoldItalic.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 700;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-Bold.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 700;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-BoldItalic.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 800;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-ExtraBold.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 800;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-ExtraBoldItalic.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: normal;
+		font-weight: 900;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-Black.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'Inter';
+		font-style: italic;
+		font-weight: 900;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/Inter-BlackItalic.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 100;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-Thin.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: italic;
+		font-weight: 100;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-ThinItalic.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 200;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-ExtraLight.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: italic;
+		font-weight: 200;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-ExtraLightItalic.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 300;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-Light.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: italic;
+		font-weight: 300;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-LightItalic.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 400;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-Regular.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: italic;
+		font-weight: 400;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-Italic.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 500;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-Medium.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: italic;
+		font-weight: 500;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-MediumItalic.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 600;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-SemiBold.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: italic;
+		font-weight: 600;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-SemiBoldItalic.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 700;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-Bold.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: italic;
+		font-weight: 700;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-BoldItalic.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 800;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-ExtraBold.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: italic;
+		font-weight: 800;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-ExtraBoldItalic.woff2')
+			format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: normal;
+		font-weight: 900;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-Black.woff2') format('woff2');
+	}
+	@font-face {
+		font-family: 'InterDisplay';
+		font-style: italic;
+		font-weight: 900;
+		font-display: swap;
+		src: url('@/assets/fonts/Inter/InterDisplay-BlackItalic.woff2')
+			format('woff2');
+	}
+
+	@font-feature-values InterVariable {
+		@character-variant {
+			cv01: 1;
+			cv02: 2;
+			cv03: 3;
+			cv04: 4;
+			cv05: 5;
+			cv06: 6;
+			cv07: 7;
+			cv08: 8;
+			cv09: 9;
+			cv10: 10;
+			cv11: 11;
+			cv12: 12;
+			cv13: 13;
+			alt-1: 1; /* Alternate one */
+			alt-3: 9; /* Flat-top three */
+			open-4: 2; /* Open four */
+			open-6: 3; /* Open six */
+			open-9: 4; /* Open nine */
+			lc-l-with-tail: 5; /* Lower-case L with tail */
+			simplified-u: 6; /* Simplified u */
+			alt-double-s: 7; /* Alternate German double s */
+			uc-i-with-serif: 8; /* Upper-case i with serif */
+			uc-g-with-spur: 10; /* Capital G with spur */
+			single-story-a: 11; /* Single-story a */
+			compact-lc-f: 12; /* Compact f */
+			compact-lc-t: 13; /* Compact t */
+		}
+		@styleset {
+			ss01: 1;
+			ss02: 2;
+			ss03: 3;
+			ss04: 4;
+			ss05: 5;
+			ss06: 6;
+			ss07: 7;
+			ss08: 8;
+			open-digits: 1; /* Open digits */
+			disambiguation: 2; /* Disambiguation (with zero) */
+			disambiguation-except-zero: 4; /* Disambiguation (no zero) */
+			round-quotes-and-commas: 3; /* Round quotes &amp; commas */
+			square-punctuation: 7; /* Square punctuation */
+			square-quotes: 8; /* Square quotes */
+			circled-characters: 5; /* Circled characters */
+			squared-characters: 6; /* Squared characters */
+		}
+	}
+	@font-feature-values Inter {
+		@character-variant {
+			cv01: 1;
+			cv02: 2;
+			cv03: 3;
+			cv04: 4;
+			cv05: 5;
+			cv06: 6;
+			cv07: 7;
+			cv08: 8;
+			cv09: 9;
+			cv10: 10;
+			cv11: 11;
+			cv12: 12;
+			cv13: 13;
+			alt-1: 1; /* Alternate one */
+			alt-3: 9; /* Flat-top three */
+			open-4: 2; /* Open four */
+			open-6: 3; /* Open six */
+			open-9: 4; /* Open nine */
+			lc-l-with-tail: 5; /* Lower-case L with tail */
+			simplified-u: 6; /* Simplified u */
+			alt-double-s: 7; /* Alternate German double s */
+			uc-i-with-serif: 8; /* Upper-case i with serif */
+			uc-g-with-spur: 10; /* Capital G with spur */
+			single-story-a: 11; /* Single-story a */
+			compact-lc-f: 12; /* Compact f */
+			compact-lc-t: 13; /* Compact t */
+		}
+		@styleset {
+			ss01: 1;
+			ss02: 2;
+			ss03: 3;
+			ss04: 4;
+			ss05: 5;
+			ss06: 6;
+			ss07: 7;
+			ss08: 8;
+			open-digits: 1; /* Open digits */
+			disambiguation: 2; /* Disambiguation (with zero) */
+			disambiguation-except-zero: 4; /* Disambiguation (no zero) */
+			round-quotes-and-commas: 3; /* Round quotes &amp; commas */
+			square-punctuation: 7; /* Square punctuation */
+			square-quotes: 8; /* Square quotes */
+			circled-characters: 5; /* Circled characters */
+			squared-characters: 6; /* Squared characters */
+		}
+	}
+	@font-feature-values InterDisplay {
+		@character-variant {
+			cv01: 1;
+			cv02: 2;
+			cv03: 3;
+			cv04: 4;
+			cv05: 5;
+			cv06: 6;
+			cv07: 7;
+			cv08: 8;
+			cv09: 9;
+			cv10: 10;
+			cv11: 11;
+			cv12: 12;
+			cv13: 13;
+			alt-1: 1; /* Alternate one */
+			alt-3: 9; /* Flat-top three */
+			open-4: 2; /* Open four */
+			open-6: 3; /* Open six */
+			open-9: 4; /* Open nine */
+			lc-l-with-tail: 5; /* Lower-case L with tail */
+			simplified-u: 6; /* Simplified u */
+			alt-double-s: 7; /* Alternate German double s */
+			uc-i-with-serif: 8; /* Upper-case i with serif */
+			uc-g-with-spur: 10; /* Capital G with spur */
+			single-story-a: 11; /* Single-story a */
+			compact-lc-f: 12; /* Compact f */
+			compact-lc-t: 13; /* Compact t */
+		}
+		@styleset {
+			ss01: 1;
+			ss02: 2;
+			ss03: 3;
+			ss04: 4;
+			ss05: 5;
+			ss06: 6;
+			ss07: 7;
+			ss08: 8;
+			open-digits: 1; /* Open digits */
+			disambiguation: 2; /* Disambiguation (with zero) */
+			disambiguation-except-zero: 4; /* Disambiguation (no zero) */
+			round-quotes-and-commas: 3; /* Round quotes &amp; commas */
+			square-punctuation: 7; /* Square punctuation */
+			square-quotes: 8; /* Square quotes */
+			circled-characters: 5; /* Circled characters */
+			squared-characters: 6; /* Squared characters */
+		}
+	}
+
+	/* Graphik */
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 200;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-ExtraLight.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Light.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+	}
+}
