--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
 	}
 
 	/* static fonts */
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: normal;
@@ -28,6 +29,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-Thin.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: italic;
@@ -35,6 +37,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-ThinItalic.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: normal;
@@ -42,6 +45,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-ExtraLight.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: italic;
@@ -57,6 +61,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-Light.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: italic;
@@ -64,6 +69,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-LightItalic.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: normal;
@@ -78,6 +84,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-Italic.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: normal;
@@ -92,6 +99,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-MediumItalic.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: normal;
@@ -99,6 +107,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-SemiBold.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: italic;
@@ -113,6 +122,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-Bold.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: italic;
@@ -120,6 +130,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-BoldItalic.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: normal;
@@ -127,6 +138,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-ExtraBold.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: italic;
@@ -134,6 +146,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-ExtraBoldItalic.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: normal;
@@ -141,6 +154,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-Black.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'Inter';
 		font-style: italic;
@@ -148,6 +162,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/Inter-BlackItalic.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: normal;
@@ -155,6 +170,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/InterDisplay-Thin.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: italic;
@@ -163,6 +179,7 @@
 		src: url('@/assets/fonts/Inter/InterDisplay-ThinItalic.woff2')
 			format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: normal;
@@ -171,6 +188,7 @@
 		src: url('@/assets/fonts/Inter/InterDisplay-ExtraLight.woff2')
 			format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: italic;
@@ -179,6 +197,7 @@
 		src: url('@/assets/fonts/Inter/InterDisplay-ExtraLightItalic.woff2')
 			format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: normal;
@@ -186,6 +205,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/InterDisplay-Light.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: italic;
@@ -194,6 +214,7 @@
 		src: url('@/assets/fonts/Inter/InterDisplay-LightItalic.woff2')
 			format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: normal;
@@ -201,6 +222,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/InterDisplay-Regular.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: italic;
@@ -208,6 +230,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/InterDisplay-Italic.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: normal;
@@ -215,6 +238,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/InterDisplay-Medium.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: italic;
@@ -223,6 +247,7 @@
 		src: url('@/assets/fonts/Inter/InterDisplay-MediumItalic.woff2')
 			format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: normal;
@@ -230,6 +255,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/InterDisplay-SemiBold.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: italic;
@@ -238,6 +264,7 @@
 		src: url('@/assets/fonts/Inter/InterDisplay-SemiBoldItalic.woff2')
 			format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: normal;
@@ -245,6 +272,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/InterDisplay-Bold.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: italic;
@@ -253,6 +281,7 @@
 		src: url('@/assets/fonts/Inter/InterDisplay-BoldItalic.woff2')
 			format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: normal;
@@ -261,6 +290,7 @@
 		src: url('@/assets/fonts/Inter/InterDisplay-ExtraBold.woff2')
 			format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: italic;
@@ -269,6 +299,7 @@
 		src: url('@/assets/fonts/Inter/InterDisplay-ExtraBoldItalic.woff2')
 			format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: normal;
@@ -276,6 +307,7 @@
 		font-display: swap;
 		src: url('@/assets/fonts/Inter/InterDisplay-Black.woff2') format('woff2');
 	}
+
 	@font-face {
 		font-family: 'InterDisplay';
 		font-style: italic;
@@ -333,6 +365,7 @@
 			squared-characters: 6; /* Squared characters */
 		}
 	}
+
 	@font-feature-values Inter {
 		@character-variant {
 			cv01: 1;
@@ -381,6 +414,7 @@
 			squared-characters: 6; /* Squared characters */
 		}
 	}
+
 	@font-feature-values InterDisplay {
 		@character-variant {
 			cv01: 1;
@@ -441,6 +475,13 @@
 
 	@font-face {
 		font-family: 'Graphik';
+		font-weight: 100;
+		font-style: italic;
+		src: url('@/assets/fonts/Graphik/Graphik-ThinItalic.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
 		font-weight: 200;
 		font-style: normal;
 		src: url('@/assets/fonts/Graphik/Graphik-ExtraLight.otf') format('opentype');
@@ -448,71 +489,112 @@
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
+		font-weight: 200;
+		font-style: italic;
+		src: url('@/assets/fonts/Graphik/Graphik-ExtraLightItalic.otf')
+			format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 300;
 		font-style: normal;
 		src: url('@/assets/fonts/Graphik/Graphik-Light.otf') format('opentype');
 	}
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
-		font-style: normal;
-		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+		font-weight: 300;
+		font-style: italic;
+		src: url('@/assets/fonts/Graphik/Graphik-LightItalic.otf')
+			format('opentype');
 	}
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
+		font-weight: 400;
 		font-style: normal;
-		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+		src: url('@/assets/fonts/Graphik/Graphik-Regular.otf') format('opentype');
 	}
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
-		font-style: normal;
-		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+		font-weight: 400;
+		font-style: italic;
+		src: url('@/assets/fonts/Graphik/Graphik-RegularItalic.otf');
 	}
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
+		font-weight: 500;
 		font-style: normal;
-		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+		src: url('@/assets/fonts/Graphik/Graphik-Medium.otf') format('opentype');
 	}
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
-		font-style: normal;
-		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+		font-weight: 500;
+		font-style: italic;
+		src: url('@/assets/fonts/Graphik/Graphik-MediumItalic.otf')
+			format('opentype');
 	}
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
+		font-weight: 600;
 		font-style: normal;
-		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+		src: url('@/assets/fonts/Graphik/Graphik-SemiBold.otf') format('opentype');
 	}
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
-		font-style: normal;
-		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+		font-weight: 600;
+		font-style: italic;
+		src: url('@/assets/fonts/Graphik/Graphik-SemiBoldItalic.otf')
+			format('opentype');
 	}
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
+		font-weight: 700;
 		font-style: normal;
-		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+		src: url('@/assets/fonts/Graphik/Graphik-Bold.otf') format('opentype');
 	}
 
 	@font-face {
 		font-family: 'Graphik';
-		font-weight: 100;
+		font-weight: 700;
+		font-style: italic;
+		src: url('@/assets/fonts/Graphik/Graphik-BoldItalic.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 800;
 		font-style: normal;
-		src: url('@/assets/fonts/Graphik/Graphik-Thin.otf') format('opentype');
+		src: url('@/assets/fonts/Graphik/Graphik-Super.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 800;
+		font-style: italic;
+		src: url('@/assets/fonts/Graphik/Graphik-SuperItalic.otf')
+			format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 900;
+		font-style: normal;
+		src: url('@/assets/fonts/Graphik/Graphik-Black.otf') format('opentype');
+	}
+
+	@font-face {
+		font-family: 'Graphik';
+		font-weight: 900;
+		font-style: italic;
+		src: url('@/assets/fonts/Graphik/Graphik-BlackItalic.otf')
+			format('opentype');
 	}
 }
