--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -1,3 +1,11 @@
+button,
+input,
+optgroup,
+select,
+textarea {
+  /* border: 0 by default in vitepress removes all border for border class */
+  border: inherit;
+}
 /**
  * Customize default theme styling by overriding CSS variables:
  * https://github.com/vuejs/vitepress/blob/main/src/client/theme-default/styles/vars.css
